<resources>
    <string name="app_name">Fitness Notes</string>
    <string name="app_name_caps">FITNESS NOTES</string>
    <string name="oauth_client_id">227809934036-l8hdcl5hmbf7vadbvs3kscn6kbjtcg3u.apps.googleusercontent.com</string>
    <string name="login">Логин</string>
    <string name="password">Пароль</string>
    <string name="repeat_password">Повторите пароль</string>
    <string name="sign_in">ВОЙТИ</string>
    <string name="registration">Зарегистрироваться</string>
    <string name="or_with">или через</string>
    <string name="google">Google</string>
    <string name="underlined_registration"><u>Регистрация</u></string>
    <string name="underlined_forgot_password"><u>Забыли пароль?</u></string>
    <string name="weight">Вес</string>
    <string name="save">СОХРАНИТЬ</string>
    <string name="count">Повторов</string>
    <string name="exercise_name">Название упражнения</string>
    <string name="sets">Подходов</string>
    <string name="training">Тренировка</string>
    <string name="delete">УДАЛИТЬ</string>
    <string name="last_complition">Последнее выполнение</string>
    <string name="exercise_not_found">Раннее упражнение не выполнялось</string>
    <string name="training_name">Название тренировки</string>
    <string name="date">Дата</string>
</resources>
