<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:focusableInTouchMode="true"
    android:orientation="vertical"
    android:padding="@dimen/side_margin">


    <include layout="@layout/header" />

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="68dp"
        android:textColor="@android:color/white"
        app:boxStrokeColor="@color/edit_text_border_color"
        app:hintTextColor="@color/orange">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_login"
            style="@style/Base.Widget.MaterialComponents.TextInputEditText.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/login"
            android:inputType="textEmailAddress" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:textColor="@android:color/white"
        app:boxStrokeColor="@color/edit_text_border_color"
        app:hintTextColor="@color/orange">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_password"
            style="@style/Base.Widget.MaterialComponents.TextInputEditText.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/btn_sign_in"
        style="@style/OrangeTextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="52dp"
        android:text="@string/sign_in" />

    <LinearLayout
        android:id="@+id/ll_sign_in_google"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="42dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:gravity="end"
            android:text="@string/or_with"
            android:textColor="#ffffff"
            android:textSize="13.3sp"
            android:textStyle="normal" />

        <ImageView
            android:layout_width="22dp"
            android:layout_height="22dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:src="@drawable/google" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:gravity="end"
            android:text="@string/google"
            android:textColor="#ffffff"
            android:textSize="13.3sp"
            android:textStyle="normal" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="72dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tb_forgot_password"
            style="@style/LoginScreenUnderlinedButtons"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/underlined_forgot_password" />

        <TextView
            android:id="@+id/tv_registration"
            style="@style/LoginScreenUnderlinedButtons"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/underlined_registration" />

    </LinearLayout>

</LinearLayout>