<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/charcoal_grey"
    android:orientation="vertical">

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/side_margin"
        android:layout_marginTop="@dimen/side_margin"
        android:layout_marginRight="@dimen/side_margin"
        android:textColor="@android:color/white"
        app:boxStrokeColor="@color/edit_text_border_color"
        app:hintTextColor="@color/orange">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_name"
            style="@style/Base.Widget.MaterialComponents.TextInputEditText.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/exercise_name"
            android:inputType="text"
            tools:text="1212313" />
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/side_margin"
        android:baselineAligned="false"
        android:orientation="horizontal">

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="12dp"
            android:layout_weight="1"
            android:textColor="@android:color/white"
            app:boxStrokeColor="@color/edit_text_border_color"
            app:hintTextColor="@color/orange">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_weight"
                style="@style/Base.Widget.MaterialComponents.TextInputEditText.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/weight"
                android:inputType="numberDecimal" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_weight="1"
            android:textColor="@android:color/white"
            app:boxStrokeColor="@color/edit_text_border_color"
            app:hintTextColor="@color/orange">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_count"
                style="@style/Base.Widget.MaterialComponents.TextInputEditText.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/count"
                android:inputType="numberDecimal" />
        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:textColor="@android:color/white"
        app:boxStrokeColor="@color/edit_text_border_color"
        app:hintTextColor="@color/orange">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_sets"
            style="@style/Base.Widget.MaterialComponents.TextInputEditText.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/sets"
            android:inputType="numberDecimal"
            tools:text="15" />
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:orientation="horizontal">

        <View
            android:layout_width="4dp"
            android:layout_height="1dp"
            android:layout_gravity="center_vertical"
            android:background="@color/brown_grey" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="4dp"
            android:paddingStart="2dp"
            android:paddingEnd="2dp"
            android:text="@string/last_complition" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_gravity="center_vertical"
            android:background="@color/brown_grey" />

    </LinearLayout>

    <TextView
        android:id="@+id/tv_completion_not_found"
        android:layout_width="match_parent"
        android:layout_height="@dimen/exercise_dividers_height"
        android:text="Раннее упражнение не выполнялось"
        android:textSize="18dp"
        android:gravity="center"/>

    <include layout="@layout/layout_exrcice_with_plan_and_dividers"
        android:visibility="gone"
        android:id="@+id/last_completion"/>

    <TextView
        android:id="@+id/btn_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/save"
        android:textColor="@color/orange"
        android:textSize="18dp" />

</LinearLayout>
